--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ seo:
 		<div class="py-15p px-8">
 			
 			<div>
-				<h2 class="editable p-8 text-center text-3xl md:text-5xl -mr-[20%] max-w-sm bg-[#d8d9db]"> As you step into the villa, you are immediately greeted by a sense of grandeur. </h2>
+				<h2 class="editable p-8 text-center text-3xl md:text-5xl -mr-[20%] max-w-m bg-[#d8d9db]"> As you step into the villa, you are immediately greeted by a sense of grandeur. </h2>
 			</div>
 
 			<div class="editable">
@@ -59,6 +59,57 @@ seo:
 		</div>
 
 		<div class="bg-image bg-cover bg-center shadow-2xl" style="background-image: url('{{page.mirrored-text-image}}')"></div>
+
+	</div>
+
+</section>
+
+
+<!--------Quote Section------------->
+
+<section class="p-5p mx-10">
+	<div class="flex justify-center">
+	<hr class="border-2 border-b-0 mb-14 w-[60%]">
+	</div>
+
+	<p class="font-serif uppercase text-center text-2xl"> Immerse yourself in luxury, privacy, and unparalleled beauty, and let your worries melt away as you experience the pinnacle of opulence in this tropical paradise. </p>
+
+	<div class="flex justify-center">
+		<hr class="border-2 border-b-0 mt-14 w-[60%]">
+	</div>
+
+</section> 
+
+
+<!--------Image Gallery------------->
+
+<section class="p-5p">
+
+	<div class="grid grid-cols-3 gap-3">
+
+		<div class="w-full">
+			<img src="/images/villa-4.png" alt="">
+		</div>
+
+		<div class="w-full col-span-2 row-span-2">
+			<img src="/images/villa-8.png" alt="">
+		</div>
+
+		<div class="w-full">
+			<img src="/images/villa-5.png" alt="">
+		</div>
+
+		<div class="w-full">
+			<img src="/images/villa-9.png" alt="">
+		</div>
+
+		<div class="w-full">
+			<img src="/images/villa-7.png" alt="">
+		</div>
+
+		<div class="w-full">
+			<img src="/images/villa-13.png" alt="">
+		</div>
 
 	</div>
 
