--- a/index.html
+++ b/index.html
@@ -87,27 +87,27 @@ seo:
 
 	<div class="grid grid-cols-3 gap-3">
 
-		<div class="w-full">
+		<div class="w-full shadow-2xl">
 			<img src="/images/villa-4.png" alt="">
 		</div>
 
-		<div class="w-full col-span-2 row-span-2">
+		<div class="w-full col-span-2 row-span-2 shadow-2xl">
 			<img src="/images/villa-8.png" alt="">
 		</div>
 
-		<div class="w-full">
+		<div class="w-full shadow-2xl">
 			<img src="/images/villa-5.png" alt="">
 		</div>
 
-		<div class="w-full">
+		<div class="w-full shadow-2xl">
 			<img src="/images/villa-9.png" alt="">
 		</div>
 
-		<div class="w-full">
+		<div class="w-full shadow-2xl">
 			<img src="/images/villa-7.png" alt="">
 		</div>
 
-		<div class="w-full">
+		<div class="w-full shadow-2xl">
 			<img src="/images/villa-13.png" alt="">
 		</div>
 
