--- a/rooms.html
+++ b/rooms.html
@@ -17,25 +17,87 @@ seo:
 
 <!--------Room 1------------->
 
-<section class="p-5p">
+<section class="p-5p mt-10 mb-10">
 
 	<div class="grid grid-cols-3 gap-3">
 
-		<div class="col-span-2">
-			<h2> The Master Bedroom </h2>
-            <p>  Every detail in the master bedroom has been meticulously designed to create an oasis of comfort and tranquility. From the carefully selected artwork to the soothing color palette, every element harmoniously comes together to provide a truly exceptional experience. </p>
+		<div class="col-span-2 grid content-center">
+			<h2 class="text-5xl "> The Exclusive Suite </h2>
+            <p class="mr-8">  Every detail in the exclusive suite has been meticulously designed to create an oasis of comfort and tranquility. From the carefully selected artwork to the soothing color palette, every element harmoniously comes together to provide a truly exceptional experience. </p>
 		</div>
 
-		<div class="aspect-square">
-			<img src="/images/villa-5.png" alt="">
+		<div class="shadow-2xl">
+			<img src="/images/villa-17.png" alt="">
 		</div>
 
-		<div class="aspect-square">
-			<img src="/images/villa-9.png" alt="">
+		<div class="shadow-2xl">
+			<img src="/images/villa-18.png" alt="">
 		</div>
 
-		<div class="aspect-landscape col-span-2">
-			<img src="/images/villa-7.png" alt="">
+		<div class="w-full col-span-2 shadow-2xl">
+			<img src="/images/villa-19.png" alt="">
+		</div>
+
+	</div>
+
+</section>
+
+<div class="flex justify-center">
+	<hr class="border-2 border-b-0  w-[30%]">
+</div>
+
+<!--------Room 2------------->
+
+<section class="p-5p mt-10 mb-10">
+
+	<div class="grid grid-cols-3 gap-3">
+
+		<div class="shadow-2xl">
+			<img src="/images/villa-21.png" alt="">
+		</div>
+
+		<div class="col-span-2 grid content-center ml-8">
+			<h2 class="text-5xl "> The Luxury Suite </h2>
+            <p>  With its generous size and thoughtfully curated decor, it embodies the epitome of refined elegance. <br> The room features a plush king-sized bed adorned with the finest linens, ensuring a restful night's sleep in absolute opulence. </p>
+		</div>
+
+		<div class="w-full col-span-2 shadow-2xl">
+			<img src="/images/villa-20.png" alt="">
+		</div>
+
+		<div class="shadow-2xl">
+			<img src="/images/villa-22.png" alt="">
+		</div>
+
+	</div>
+
+</section>
+
+<div class="flex justify-center">
+	<hr class="border-2 border-b-0  w-[30%]">
+</div>
+
+<!--------Room 3------------->
+
+<section class="p-5p my-10">
+
+	<div class="grid grid-cols-3 gap-3">
+
+		<div class="col-span-2 grid content-center">
+			<h2 class="text-5xl "> The Tranquility Suite </h2>
+            <p class="mr-8">  Large windows frame breathtaking views of the surrounding natural beauty, allowing soft rays of sunlight to filter into the room and create a serene atmosphere. <br> A private sitting area provides a cozy retreat, where you can unwind with a good book or simply revel in the tranquility of your surroundings. </p>
+		</div>
+
+		<div class="shadow-2xl">
+			<img src="/images/villa-16.png" alt="">
+		</div>
+
+		<div class="shadow-2xl">
+			<img src="/images/villa-23.png" alt="">
+		</div>
+
+		<div class="w-full col-span-2 shadow-2xl">
+			<img src="/images/villa-6.png" alt="">
 		</div>
 
 	</div>
