--- a/rooms.html
+++ b/rooms.html
@@ -1,7 +1,7 @@
 ---
 layout: default 
 title: Rooms
-background-position: bg-center
+background-position: bg-[position:64%_50%] 
 banner-image: /images/villa-15.png
 heading: Rooms
 pre-heading: 
@@ -19,14 +19,15 @@ seo:
 
 <section class="p-5p mt-10 mb-10">
 
-	<div class="grid grid-cols-3 gap-3">
+	<div class="sm:grid sm:grid-cols-3 gap-3">
 
-		<div class="col-span-2 grid content-center">
-			<h2 class="text-5xl "> The Exclusive Suite </h2>
-            <p class="mr-8">  Every detail in the exclusive suite has been meticulously designed to create an oasis of comfort and tranquility. From the carefully selected artwork to the soothing color palette, every element harmoniously comes together to provide a truly exceptional experience. </p>
+		<div class="col-span-2 sm:grid sm:content-center text-center sm:text-left">
+			<h2 class="text-4xl m:text-5xl sm:mr-8"> The Exclusive Suite </h2>
+            <p class="sm:mr-8">  Every detail in the exclusive suite has been meticulously designed to create an oasis of comfort and tranquility. </p>
+			<p class="sm:mr-8 mb-10 sm:mb-0"> From the carefully selected artwork to the soothing color palette, every element comes together to provide an exceptional experience. </p>
 		</div>
 
-		<div class="shadow-2xl">
+		<div class="shadow-2xl mb-4 sm:mb-0">
 			<img src="/images/villa-17.png" alt="">
 		</div>
 
@@ -34,7 +35,7 @@ seo:
 			<img src="/images/villa-18.png" alt="">
 		</div>
 
-		<div class="w-full col-span-2 shadow-2xl">
+		<div class="hidden sm:block w-full col-span-2 shadow-2xl">
 			<img src="/images/villa-19.png" alt="">
 		</div>
 
@@ -42,7 +43,7 @@ seo:
 
 </section>
 
-<div class="flex justify-center">
+<div class="sm:flex justify-center hidden">
 	<hr class="border-2 border-b-0  w-[30%]">
 </div>
 
@@ -50,18 +51,19 @@ seo:
 
 <section class="p-5p mt-10 mb-10">
 
-	<div class="grid grid-cols-3 gap-3">
+	<div class="sm:grid sm:grid-cols-3 gap-3">
 
-		<div class="shadow-2xl">
+		<div class="hidden sm:block shadow-2xl">
 			<img src="/images/villa-21.png" alt="">
 		</div>
 
-		<div class="col-span-2 grid content-center ml-8">
-			<h2 class="text-5xl "> The Luxury Suite </h2>
-            <p>  With its generous size and thoughtfully curated decor, it embodies the epitome of refined elegance. <br> The room features a plush king-sized bed adorned with the finest linens, ensuring a restful night's sleep in absolute opulence. </p>
+		<div class="col-span-2 sm:grid sm:content-center text-center sm:text-left">
+			<h2 class="text-4xl m:text-5xl"> The Luxury Suite </h2>
+            <p>  With its generous size and thoughtfully curated decor, it embodies the epitome of refined elegance. </p>
+			<p class="mb-10 sm:mb-0">  The room features a plush king-sized bed adorned with the finest linens, ensuring a restful night's sleep in absolute opulence. </p>
 		</div>
 
-		<div class="w-full col-span-2 shadow-2xl">
+		<div class="w-full col-span-2 shadow-2xl mb-4 sm:mb-0">
 			<img src="/images/villa-20.png" alt="">
 		</div>
 
@@ -73,7 +75,7 @@ seo:
 
 </section>
 
-<div class="flex justify-center">
+<div class="sm:flex justify-center hidden">
 	<hr class="border-2 border-b-0  w-[30%]">
 </div>
 
@@ -81,11 +83,12 @@ seo:
 
 <section class="p-5p my-10">
 
-	<div class="grid grid-cols-3 gap-3">
+	<div class="sm:grid sm:grid-cols-3 gap-3">
 
-		<div class="col-span-2 grid content-center">
-			<h2 class="text-5xl "> The Tranquility Suite </h2>
-            <p class="mr-8">  Large windows frame breathtaking views of the surrounding natural beauty, allowing soft rays of sunlight to filter into the room and create a serene atmosphere. <br> A private sitting area provides a cozy retreat, where you can unwind with a good book or simply revel in the tranquility of your surroundings. </p>
+		<div class="col-span-2 sm:grid sm:content-center text-center sm:text-left">
+			<h2 class="text-4xl m:text-5xl"> The Tranquility Suite </h2>
+            <p class="sm:mr-8">  Large windows frame breathtaking views of the surrounding natural beauty, allowing soft rays of sunlight to filter into the room and create a serene atmosphere.</p>
+			<p class="sm:mr-8 mb-10 sm:mb-0"> A private sitting area provides a cozy retreat, where you can unwind with a good book or simply revel in the tranquility of your surroundings. </p>
 		</div>
 
 		<div class="shadow-2xl">
@@ -96,7 +99,7 @@ seo:
 			<img src="/images/villa-23.png" alt="">
 		</div>
 
-		<div class="w-full col-span-2 shadow-2xl">
+		<div class="hidden sm:block w-full col-span-2 shadow-2xl">
 			<img src="/images/villa-6.png" alt="">
 		</div>
 
