--- a/rooms.html
+++ b/rooms.html
@@ -91,7 +91,7 @@ seo:
 			<p class="sm:mr-8 mb-10 sm:mb-0"> A private sitting area provides a cozy retreat, where you can unwind with a good book or simply revel in the tranquility of your surroundings. </p>
 		</div>
 
-		<div class="shadow-2xl">
+		<div class="shadow-2xl mb-4 sm:mb-0">
 			<img src="/images/villa-16.png" alt="">
 		</div>
 
