--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@ seo:
 
 	<div class="grid grid-cols-3 gap-3">
 
-		<div class="w-full shadow-2xl">
-			<img src="/images/villa-4.png" alt="">
+		<div class="w-full shadow-2xl relative min-h-50">
+			<img src="/images/villa-4.png" alt="" class="absolute object-cover object-top w-full h-full">
 		</div>
 
 		<div class="w-full col-span-2 row-span-2 shadow-2xl">
