--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ seo:
 		<div class="py-15p sm:px-8">
 			
 			<div>
-				<h2 class="editable sm:p-8 text-center text-3xl md:text-5xl sm:-mr-[20%] max-w-m sm:bg-[#d8d9db] hidden sm:block"> As you step into the villa, you are immediately greeted by a sense of grandeur. </h2>
+				<h2 class="editable sm:p-8 text-center text-3xl md:text-5xl sm:-mr-[20%] max-w-m sm:bg-[#d8d9db] hidden sm:block z-10 relative"> As you step into the villa, you are immediately greeted by a sense of grandeur. </h2>
 			</div>
 
 			<div class="editable">
