--- a/rooms.html
+++ b/rooms.html
@@ -27,16 +27,16 @@ seo:
 			<p class="sm:mr-8 mb-10 sm:mb-0"> From the carefully selected artwork to the soothing color palette, every element comes together to provide an exceptional experience. </p>
 		</div>
 
-		<div class="shadow-2xl mb-4 sm:mb-0">
-			<img src="/images/villa-17.png" alt="">
+		<div class="shadow-2xl mb-4 sm:mb-0 relative min-h-50">
+			<img src="/images/villa-17.png" alt="" class="absolute object-cover object-top w-full h-full">
 		</div>
 
-		<div class="shadow-2xl">
-			<img src="/images/villa-18.png" alt="">
+		<div class="shadow-2xl relative min-h-50">
+			<img src="/images/villa-18.png" alt="" class="absolute object-cover object-top w-full h-full">
 		</div>
 
-		<div class="hidden sm:block w-full col-span-2 shadow-2xl">
-			<img src="/images/villa-19.png" alt="">
+		<div class="hidden sm:block w-full col-span-2 shadow-2xl relative min-h-50">
+			<img src="/images/villa-19.png" alt="" class="absolute object-cover object-top w-full h-full">
 		</div>
 
 	</div>
@@ -53,22 +53,22 @@ seo:
 
 	<div class="sm:grid sm:grid-cols-3 gap-3">
 
-		<div class="hidden sm:block shadow-2xl">
-			<img src="/images/villa-21.png" alt="">
+		<div class="hidden sm:block shadow-2xl relative min-h-50">
+			<img src="/images/villa-21.png" alt="" class="absolute object-cover object-top w-full h-full">
 		</div>
 
-		<div class="col-span-2 sm:grid sm:content-center text-center sm:text-left">
+		<div class="col-span-2 sm:grid sm:content-center text-center sm:text-left pl-[2%]">
 			<h2 class="text-4xl m:text-5xl"> The Luxury Suite </h2>
             <p>  With its generous size and thoughtfully curated decor, it embodies the epitome of refined elegance. </p>
 			<p class="mb-10 sm:mb-0">  The room features a plush king-sized bed adorned with the finest linens, ensuring a restful night's sleep in absolute opulence. </p>
 		</div>
 
-		<div class="w-full col-span-2 shadow-2xl mb-4 sm:mb-0">
-			<img src="/images/villa-20.png" alt="">
+		<div class="w-full col-span-2 shadow-2xl mb-4 sm:mb-0 relative min-h-50">
+			<img src="/images/villa-20.png" alt="" class="absolute object-cover object-top w-full h-full">
 		</div>
 
-		<div class="shadow-2xl">
-			<img src="/images/villa-22.png" alt="">
+		<div class="shadow-2xl relative min-h-50">
+			<img src="/images/villa-22.png" alt="" class="absolute object-cover object-top w-full h-full">
 		</div>
 
 	</div>
@@ -91,16 +91,16 @@ seo:
 			<p class="sm:mr-8 mb-10 sm:mb-0"> A private sitting area provides a cozy retreat, where you can unwind with a good book or simply revel in the tranquility of your surroundings. </p>
 		</div>
 
-		<div class="shadow-2xl mb-4 sm:mb-0">
-			<img src="/images/villa-16.png" alt="">
+		<div class="shadow-2xl mb-4 sm:mb-0 relative min-h-50">
+			<img src="/images/villa-16.png" alt="" class="absolute object-cover object-top w-full h-full">
 		</div>
 
-		<div class="shadow-2xl">
-			<img src="/images/villa-23.png" alt="">
+		<div class="shadow-2xl relative min-h-50">
+			<img src="/images/villa-23.png" alt="" class="absolute object-cover object-top w-full h-full">
 		</div>
 
-		<div class="hidden sm:block w-full col-span-2 shadow-2xl">
-			<img src="/images/villa-6.png" alt="">
+		<div class="hidden sm:block w-full col-span-2 shadow-2xl relative min-h-50">
+			<img src="/images/villa-6.png" alt="" class="absolute object-cover object-top w-full h-full">
 		</div>
 
 	</div>
