--- a/contact.html
+++ b/contact.html
@@ -21,8 +21,8 @@ seo:
 
 	<div class="sm:grid sm:grid-cols-3 gap-3">
 
-		<div class="shadow-2xl hidden sm:block">
-			<img src="/images/villa-26.png" alt="">
+		<div class="shadow-2xl hidden sm:block relative min-h-50">
+			<img src="/images/villa-26.png" alt="" class="absolute object-cover object-top w-full h-full">
 		</div>
 
 		<div class="col-span-2 grid content-center ">
@@ -32,7 +32,7 @@ seo:
             <section class="pl-[5%] pb-[2%] mb-10 sm:mb-0">
                 
                 <div class="mb-8">
-                    <h3 class="text-3xl text-center text-sans"> Contact us for enquiries and bookings below. </h3>
+                    <h3 class="text-3xl text-center font-sans uppercase"> Contact us for enquiries and bookings below. </h3>
                 </div>
                 
                 <form>
@@ -59,12 +59,12 @@ seo:
 
 		</div>
 
-		<div class="w-full col-span-2 shadow-2xl hidden sm:block">
-			<img src="/images/villa-25.png" alt="">
+		<div class="w-full col-span-2 shadow-2xl hidden sm:block relative min-h-50">
+			<img src="/images/villa-25.png" alt="" class="absolute object-cover object-top w-full h-full">
 		</div>
 
-		<div class="shadow-2xl">
-			<img src="/images/villa-27.png" alt="">
+		<div class="shadow-2xl relative min-h-50">
+			<img src="/images/villa-27.png" alt="" class="absolute object-cover object-top w-full h-full">
 		</div>
 
 	</div>
