--- a/index.html
+++ b/index.html
@@ -99,24 +99,24 @@ seo:
 			<img src="/images/villa-4.png" alt="" class="absolute object-cover object-top w-full h-full">
 		</div>
 
-		<div class="w-full col-span-2 row-span-2 shadow-2xl">
-			<img src="/images/villa-8.png" alt="">
+		<div class="w-full col-span-2 row-span-2 shadow-2xl relative min-h-50">
+			<img src="/images/villa-8.png" alt="" class="absolute object-cover object-top w-full h-full">
 		</div>
 
-		<div class="w-full shadow-2xl">
-			<img src="/images/villa-5.png" alt="">
+		<div class="w-full shadow-2xl relative min-h-50">
+			<img src="/images/villa-5.png" alt="" class="absolute object-cover object-top w-full h-full">
 		</div>
 
-		<div class="w-full shadow-2xl">
-			<img src="/images/villa-9.png" alt="">
+		<div class="w-full shadow-2xl relative min-h-50">
+			<img src="/images/villa-9.png" alt="" class="absolute object-cover object-top w-full h-full">
 		</div>
 
-		<div class="w-full shadow-2xl">
-			<img src="/images/villa-7.png" alt="">
+		<div class="w-full shadow-2xl relative min-h-50">
+			<img src="/images/villa-7.png" alt="" class="absolute object-cover object-top w-full h-full">
 		</div>
 
-		<div class="w-full shadow-2xl">
-			<img src="/images/villa-13.png" alt="">
+		<div class="w-full shadow-2xl relative min-h-50">
+			<img src="/images/villa-13.png" alt="" class="absolute object-cover object-top w-full h-full">
 		</div>
 
 	</div>
