--- a/rooms.html
+++ b/rooms.html
@@ -100,7 +100,7 @@ seo:
 		</div>
 
 		<div class="hidden sm:block w-full col-span-2 shadow-2xl relative min-h-50">
-			<img src="/images/villa-6.png" alt="" class="absolute object-cover object-top w-full h-full">
+			<img src="/images/villa-6.png" alt="" class="absolute object-cover bg-center w-full h-full">
 		</div>
 
 	</div>
