--- a/index.html
+++ b/index.html
@@ -93,30 +93,30 @@ seo:
 
 <section class="py-15p px-5p sm:p-5p">
 
-	<div class="grid grid-cols-3 gap-3">
+	<div class="sm:grid sm:grid-cols-3 sm:gap-3">
 
-		<div class="w-full shadow-2xl relative min-h-50">
-			<img src="/images/villa-4.png" alt="" class="absolute object-cover object-top w-full h-full">
+		<div class="hidden sm:block w-full shadow-2xl relative min-h-50">
+			<img src="/images/villa-4.png" alt="" class="bg-center absolute object-cover object-top w-full h-full">
 		</div>
 
 		<div class="w-full col-span-2 row-span-2 shadow-2xl relative min-h-50">
-			<img src="/images/villa-8.png" alt="" class="absolute object-cover object-top w-full h-full">
+			<img src="/images/villa-8.png" alt="" class="bg-center absolute object-cover w-full h-full">
 		</div>
 
-		<div class="w-full shadow-2xl relative min-h-50">
-			<img src="/images/villa-5.png" alt="" class="absolute object-cover object-top w-full h-full">
+		<div class="hidden sm:block w-full shadow-2xl relative min-h-50">
+			<img src="/images/villa-5.png" alt="" class="bg-center absolute object-cover object-top w-full h-full">
 		</div>
 
-		<div class="w-full shadow-2xl relative min-h-50">
-			<img src="/images/villa-9.png" alt="" class="absolute object-cover object-top w-full h-full">
+		<div class="hidden sm:block w-full shadow-2xl relative min-h-50">
+			<img src="/images/villa-9.png" alt="" class="bg-center absolute object-cover object-top w-full h-full">
 		</div>
 
-		<div class="w-full shadow-2xl relative min-h-50">
-			<img src="/images/villa-7.png" alt="" class="absolute object-cover object-top w-full h-full">
+		<div class="hidden sm:block w-full shadow-2xl relative min-h-50">
+			<img src="/images/villa-7.png" alt="" class="bg-center absolute object-cover object-top w-full h-full">
 		</div>
 
-		<div class="w-full shadow-2xl relative min-h-50">
-			<img src="/images/villa-13.png" alt="" class="absolute object-cover object-top w-full h-full">
+		<div class="hidden sm:block w-full shadow-2xl relative min-h-50">
+			<img src="/images/villa-13.png" alt="" class="bg-center absolute object-cover w-full h-full">
 		</div>
 
 	</div>
