--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ seo:
 	<div class="sm:grid sm:grid-cols-3 sm:gap-3">
 
 		<div class="hidden sm:block w-full shadow-2xl relative min-h-50">
-			<img src="/images/villa-4.png" alt="" class="bg-center absolute object-cover object-top w-full h-full">
+			<img src="/images/villa-4.png" alt="" class="bg-center absolute object-cover  w-full h-full">
 		</div>
 
 		<div class="w-full col-span-2 row-span-2 shadow-2xl relative min-h-50">
@@ -104,15 +104,15 @@ seo:
 		</div>
 
 		<div class="hidden sm:block w-full shadow-2xl relative min-h-50">
-			<img src="/images/villa-5.png" alt="" class="bg-center absolute object-cover object-top w-full h-full">
+			<img src="/images/villa-5.png" alt="" class="bg-center absolute object-cover  w-full h-full">
 		</div>
 
 		<div class="hidden sm:block w-full shadow-2xl relative min-h-50">
-			<img src="/images/villa-9.png" alt="" class="bg-center absolute object-cover object-top w-full h-full">
+			<img src="/images/villa-9.png" alt="" class="bg-center absolute object-cover w-full h-full">
 		</div>
 
 		<div class="hidden sm:block w-full shadow-2xl relative min-h-50">
-			<img src="/images/villa-7.png" alt="" class="bg-center absolute object-cover object-top w-full h-full">
+			<img src="/images/villa-7.png" alt="" class="bg-center absolute object-cover w-full h-full">
 		</div>
 
 		<div class="hidden sm:block w-full shadow-2xl relative min-h-50">
