--- a/contact.html
+++ b/contact.html
@@ -60,11 +60,11 @@ seo:
 		</div>
 
 		<div class="w-full col-span-2 shadow-2xl hidden sm:block relative min-h-50">
-			<img src="/images/villa-25.png" alt="" class="absolute object-cover object-top w-full h-full">
+			<img src="/images/villa-25.png" alt="" class="absolute object-cover bg-center w-full h-full">
 		</div>
 
 		<div class="shadow-2xl relative min-h-50">
-			<img src="/images/villa-27.png" alt="" class="absolute object-cover object-top w-full h-full">
+			<img src="/images/villa-27.png" alt="" class="absolute object-cover bg-center w-full h-full">
 		</div>
 
 	</div>
