--- a/index.html
+++ b/index.html
@@ -5,14 +5,11 @@ background-position: bg-[position:50%_82%]
 banner-image: /images/villa-1.png
 heading: The Bali Villa
 pre-heading: Welcome to
-text-image: /images/villa-2.png
 mirrored-text-image: /images/villa-3.png
 seo:
-  title: 
-  description:
-  social_image:
-  keywords:
-  hide-from-google: true
+  title: The Bali Villa
+  description: Experience Ultimate Luxury in Our Private Bali Villa. Book Now for an Unforgettable Getaway. Spacious 3-Bedroom, 3-Bathroom Villa with Complete Privacy.
+  hide-from-google: false
 ---
 
 <!--------Text Section------------->
@@ -25,7 +22,7 @@ seo:
 			<h2 class="editable text-center text-3xl my-8"> Welcome <br> to the epitome of luxury in Bali. </h2>
 		</div>
 
-		<div class="bg-image bg-cover bg-center shadow-2xl min-h-50" style="background-image: url('{{page.text-image}}')"></div>
+		<div class="bg-image bg-cover bg-center shadow-2xl min-h-50" style="background-image: url('/images/villa-2.png')"></div>
 
 		<div class="pt-15p pb-5p sm:py-15p sm:px-8">
 			
@@ -96,27 +93,27 @@ seo:
 	<div class="sm:grid sm:grid-cols-3 sm:gap-3">
 
 		<div class="hidden sm:block w-full shadow-2xl relative min-h-50">
-			<img src="/images/villa-4.png" alt="" class="bg-center object-top absolute object-cover w-full h-full">
+			<img src="/images/villa-4.png" alt="Elegant decorative plant on villa plate." class="bg-center object-top absolute object-cover w-full h-full">
 		</div>
 
 		<div class="w-full col-span-2 row-span-2 shadow-2xl relative min-h-50">
-			<img src="/images/villa-8.png" alt="" class="bg-center absolute object-cover w-full h-full">
+			<img src="/images/villa-8.png" alt="Sunlit terrace with 2 chairs and table." class="bg-center absolute object-cover w-full h-full">
 		</div>
 
 		<div class="hidden sm:block w-full shadow-2xl relative min-h-50">
-			<img src="/images/villa-5.png" alt="" class="bg-center absolute object-cover  w-full h-full">
+			<img src="/images/villa-5.png" alt="Decorative artsy magazine at the Bali Villa." class="bg-center absolute object-cover  w-full h-full">
 		</div>
 
 		<div class="hidden sm:block w-full shadow-2xl relative min-h-50">
-			<img src="/images/villa-9.png" alt="" class="bg-center absolute object-cover w-full h-full">
+			<img src="/images/villa-9.png" alt="High-quality shawls on villa shelf." class="bg-center absolute object-cover w-full h-full">
 		</div>
 
 		<div class="hidden sm:block w-full shadow-2xl relative min-h-50">
-			<img src="/images/villa-7.png" alt="" class="bg-center absolute object-cover w-full h-full">
+			<img src="/images/villa-7.png" alt="Lush green plant leaves at the Bali Villa." class="bg-center absolute object-cover w-full h-full">
 		</div>
 
 		<div class="hidden sm:block w-full shadow-2xl relative min-h-50">
-			<img src="/images/villa-13.png" alt="" class="bg-center absolute object-cover w-full h-full">
+			<img src="/images/villa-13.png" alt="Chair by window with ocean view." class="bg-center absolute object-cover w-full h-full">
 		</div>
 
 	</div>
