--- a/rooms.html
+++ b/rooms.html
@@ -28,15 +28,15 @@ seo:
 		</div>
 
 		<div class="shadow-2xl mb-4 sm:mb-0 relative min-h-50">
-			<img src="/images/villa-17.png" alt="" class="absolute object-cover bg-center w-full h-full">
+			<img src="/images/villa-17.png" alt="Cozy bed, plant, and lamp in suite." class="absolute object-cover bg-center w-full h-full">
 		</div>
 
 		<div class="shadow-2xl relative min-h-50">
-			<img src="/images/villa-18.png" alt="" class="absolute object-cover bg-center w-full h-full">
+			<img src="/images/villa-18.png" alt="Luxurious villa bathtub." class="absolute object-cover bg-center w-full h-full">
 		</div>
 
 		<div class="hidden sm:block w-full col-span-2 shadow-2xl relative min-h-50">
-			<img src="/images/villa-19.png" alt="" class="absolute object-cover bg-center w-full h-full">
+			<img src="/images/villa-19.png" alt="Plant in white pot on villa table." class="absolute object-cover bg-center w-full h-full">
 		</div>
 
 	</div>
@@ -54,7 +54,7 @@ seo:
 	<div class="sm:grid sm:grid-cols-3 gap-3">
 
 		<div class="hidden sm:block shadow-2xl relative min-h-50">
-			<img src="/images/villa-21.png" alt="" class="absolute object-cover bg-center w-full h-full">
+			<img src="/images/villa-21.png" alt="White chair backrest at villa." class="absolute object-cover bg-center w-full h-full">
 		</div>
 
 		<div class="col-span-2 sm:grid sm:content-center text-center sm:text-left pl-[2%]">
@@ -64,11 +64,11 @@ seo:
 		</div>
 
 		<div class="w-full col-span-2 shadow-2xl mb-4 sm:mb-0 relative min-h-50">
-			<img src="/images/villa-20.png" alt="" class="absolute object-cover bg-center w-full h-full">
+			<img src="/images/villa-20.png" alt="Woven basket decor at villa." class="absolute object-cover bg-center w-full h-full">
 		</div>
 
 		<div class="shadow-2xl relative min-h-50">
-			<img src="/images/villa-22.png" alt="" class="absolute object-cover bg-center w-full h-full">
+			<img src="/images/villa-22.png" alt="Plant in woven basket decor." class="absolute object-cover bg-center w-full h-full">
 		</div>
 
 	</div>
@@ -92,15 +92,15 @@ seo:
 		</div>
 
 		<div class="shadow-2xl mb-4 sm:mb-0 relative min-h-50">
-			<img src="/images/villa-16.png" alt="" class="absolute object-cover bg-center w-full h-full">
+			<img src="/images/villa-16.png" alt="Relaxing in a suite of the Bali Villa." class="absolute object-cover bg-center w-full h-full">
 		</div>
 
 		<div class="shadow-2xl relative min-h-50">
-			<img src="/images/villa-23.png" alt="" class="absolute object-cover bg-center w-full h-full">
+			<img src="/images/villa-23.png" alt="Bed and distant desk with plant." class="absolute object-cover bg-center w-full h-full">
 		</div>
 
 		<div class="hidden sm:block w-full col-span-2 shadow-2xl relative min-h-50">
-			<img src="/images/villa-6.png" alt="" class="absolute object-cover bg-center w-full h-full">
+			<img src="/images/villa-6.png" alt="White sofa, plants, photo in villa." class="absolute object-cover bg-center w-full h-full">
 		</div>
 
 	</div>
