--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@ seo:
 	<div class="sm:grid sm:grid-cols-3 gap-3">
 
 		<div class="shadow-2xl hidden sm:block relative min-h-50">
-			<img src="/images/villa-26.png" alt="" class="absolute object-cover object-top w-full h-full">
+			<img src="/images/villa-26.png" alt="Blueberry-topped porridge and plants." class="absolute object-cover object-top w-full h-full">
 		</div>
 
 		<div class="col-span-2 grid content-center ">
@@ -60,11 +60,11 @@ seo:
 		</div>
 
 		<div class="w-full col-span-2 shadow-2xl hidden sm:block relative min-h-50">
-			<img src="/images/villa-25.png" alt="" class="absolute object-cover bg-center w-full h-full">
+			<img src="/images/villa-25.png" alt="Cozy bed with wooden frame." class="absolute object-cover bg-center w-full h-full">
 		</div>
 
 		<div class="shadow-2xl relative min-h-50">
-			<img src="/images/villa-27.png" alt="" class="absolute object-cover bg-center w-full h-full">
+			<img src="/images/villa-27.png" alt="Decorative plants and object at villa." class="absolute object-cover bg-center w-full h-full">
 		</div>
 
 	</div>
