--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default 
 title: Homepage
-background-position: bg-[position:50%_82%]
+background-position: bg-[position:23%_50%] sm:bg-[position:18%_50%]
 banner-image: /images/villa-1.png
 heading: The Bali Villa
 pre-heading: Welcome to
@@ -31,8 +31,8 @@ seo:
 			</div>
 
 			<div class="editable">
-				<p class="text-center md:text-left"> Nestled on a sprawling property, this remarkable villa is truly one of a kind. </p>
-				<p class="text-center md:text-left"> With its exquisite design and unparalleled privacy, it offers an unparalleled experience that is unmatched in every aspect. </p>
+				<p class="text-center md:text-left md:ml-[1rem]"> Nestled on a sprawling property, this remarkable villa is truly one of a kind. </p>
+				<p class="text-center md:text-left md:ml-[1rem]"> With its exquisite design and unparalleled privacy, it offers an unparalleled experience that is unmatched in every aspect. </p>
 			</div>
 
 		</div>
@@ -57,8 +57,8 @@ seo:
 			</div>
 
 			<div class="editable">
-				<p class="text-center md:text-left"> The spacious living area, adorned with tasteful and opulent furnishings, creates an ambiance of elegance and comfort. </p>
-				<p class="text-center md:text-left"> Large floor-to-ceiling windows invite natural light to illuminate the space, providing breathtaking views of the lush surroundings. </p>
+				<p class="text-center md:text-left md:ml-[1rem]"> The spacious living area, adorned with tasteful and opulent furnishings, creates an ambiance of elegance and comfort. </p>
+				<p class="text-center md:text-left md:ml-[1rem]"> Large floor-to-ceiling windows invite natural light to illuminate the space, providing breathtaking views of the lush surroundings. </p>
 			</div>
 
 		</div>
@@ -72,7 +72,7 @@ seo:
 
 <!--------Quote Section------------->
 
-<section class="py-5p sm:p-5p mx-10">
+<section class="py-5p sm:p-5p mx-8 sm:mx-10 mb-0">
 	<div class="flex justify-center">
 	<hr class="border-2 border-b-0 mb-14 w-[60%]">
 	</div>
