--- a/rooms.html
+++ b/rooms.html
@@ -1,8 +1,8 @@
 ---
 layout: default 
 title: Rooms
-background-position: bg-[position:64%_50%] 
-banner-image: /images/villa-15.png
+background-position: bg-[position:73%_50%] 
+banner-image: /images/rooms_new.png
 heading: Rooms
 pre-heading: 
 text-image: /images/villa-2.png
@@ -12,12 +12,12 @@ seo:
   description:
   social_image:
   keywords:
-  hide-from-google: true
+  hide-from-google: false
 ---
 
 <!--------Room 1------------->
 
-<section class="p-5p mt-10 mb-10">
+<section class="p-5p mt-8 mb-10">
 
 	<div class="sm:grid sm:grid-cols-3 gap-3">
 
@@ -54,7 +54,7 @@ seo:
 	<div class="sm:grid sm:grid-cols-3 gap-3">
 
 		<div class="hidden sm:block shadow-2xl relative min-h-50">
-			<img src="/images/villa-21.png" alt="White chair backrest at villa." class="absolute object-cover bg-center w-full h-full">
+			<img src="/images/new-chair.png" alt="" class="absolute object-cover bg-center w-full h-full">
 		</div>
 
 		<div class="col-span-2 sm:grid sm:content-center text-center sm:text-left pl-[2%]">
@@ -81,7 +81,7 @@ seo:
 
 <!--------Room 3------------->
 
-<section class="p-5p my-10">
+<section class="p-5p mt-10">
 
 	<div class="sm:grid sm:grid-cols-3 gap-3">
 
