--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 ---
 layout: default 
 title: Contact
-background-position: bg-center
+background-position: bg-[position:36%_50%] sm:bg-[position:50%_50%]
 banner-image: /images/villa-24.png
 heading: Booking Enquiry
 pre-heading: Contact us today to make a
@@ -12,12 +12,12 @@ seo:
   description:
   social_image:
   keywords:
-  hide-from-google: true
+  hide-from-google: false
 ---
 
 <!--------Contact Form with Pictures------------->
 
-<section class="p-5p mt-10 mb-10">
+<section class="p-5p mt-8">
 
 	<div class="sm:grid sm:grid-cols-3 gap-3">
 
@@ -29,7 +29,7 @@ seo:
 			
             <!--------Contact Form-------------->
 
-            <section class="pl-[5%] pb-[2%] mb-10 sm:mb-0">
+            <section class="sm:pl-[5%] pb-[2%] mb-10 sm:mb-0">
                 
                 <div class="mb-8">
                     <h3 class="text-3xl text-center font-sans uppercase"> Contact us for enquiries and bookings below. </h3>
