--- a/rooms.html
+++ b/rooms.html
@@ -1,11 +1,12 @@
 ---
 layout: default 
 title: Rooms
-background-position: bg-[position:73%_50%] 
-banner-image: /images/rooms_new.png
+background-position: bg-[position:25%_50%] md:bg-[position:73%_50%] 
+banner-image: /images/plant-flip.png
 heading: Rooms
-pre-heading: 
+pre-heading: Have a look at our
 text-image: /images/villa-2.png
+text-alignment: text-center sm:text-right
 mirrored-text-image: /images/villa-3.png
 seo:
   title: 
