--- a/rooms.html
+++ b/rooms.html
@@ -29,15 +29,15 @@ seo:
 		</div>
 
 		<div class="shadow-2xl mb-4 sm:mb-0 relative min-h-50">
-			<img src="/images/villa-17.png" alt="Cozy bed, plant, and lamp in suite." class="absolute object-cover bg-center w-full h-full">
+			<img src="/images/villa-17-small.png" alt="Cozy bed, plant, and lamp in suite." class="absolute object-cover bg-center w-full h-full">
 		</div>
 
 		<div class="shadow-2xl relative min-h-50">
-			<img src="/images/villa-18.png" alt="Luxurious villa bathtub." class="absolute object-cover bg-center w-full h-full">
+			<img src="/images/villa-18-small.png" alt="Luxurious villa bathtub." class="absolute object-cover bg-center w-full h-full">
 		</div>
 
 		<div class="hidden sm:block w-full col-span-2 shadow-2xl relative min-h-50">
-			<img src="/images/villa-19.png" alt="Plant in white pot on villa table." class="absolute object-cover bg-center w-full h-full">
+			<img src="/images/villa-19-small.png" alt="Plant in white pot on villa table." class="absolute object-cover bg-center w-full h-full">
 		</div>
 
 	</div>
@@ -55,7 +55,7 @@ seo:
 	<div class="sm:grid sm:grid-cols-3 gap-3">
 
 		<div class="hidden sm:block shadow-2xl relative min-h-50">
-			<img src="/images/new-chair.png" alt="" class="absolute object-cover bg-center w-full h-full">
+			<img src="/images/new-chair-small.png" alt="" class="absolute object-cover bg-center w-full h-full">
 		</div>
 
 		<div class="col-span-2 sm:grid sm:content-center text-center sm:text-left pl-[2%]">
@@ -69,7 +69,7 @@ seo:
 		</div>
 
 		<div class="shadow-2xl relative min-h-50">
-			<img src="/images/villa-22.png" alt="Plant in woven basket decor." class="absolute object-cover bg-center w-full h-full">
+			<img src="/images/villa-22-small.png" alt="Plant in woven basket decor." class="absolute object-cover bg-center w-full h-full">
 		</div>
 
 	</div>
@@ -93,11 +93,11 @@ seo:
 		</div>
 
 		<div class="shadow-2xl mb-4 sm:mb-0 relative min-h-50">
-			<img src="/images/villa-16.png" alt="Relaxing in a suite of the Bali Villa." class="absolute object-cover bg-center w-full h-full">
+			<img src="/images/villa-16-small.png" alt="Relaxing in a suite of the Bali Villa." class="absolute object-cover bg-center w-full h-full">
 		</div>
 
 		<div class="shadow-2xl relative min-h-50">
-			<img src="/images/villa-23.png" alt="Bed and distant desk with plant." class="absolute object-cover bg-center w-full h-full">
+			<img src="/images/villa-23-small.png" alt="Bed and distant desk with plant." class="absolute object-cover bg-center w-full h-full">
 		</div>
 
 		<div class="hidden sm:block w-full col-span-2 shadow-2xl relative min-h-50">
