--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ background-position: bg-[position:23%_50%] sm:bg-[position:18%_50%]
 banner-image: /images/villa-1.png
 heading: The Bali Villa
 pre-heading: Welcome to
-mirrored-text-image: /images/villa-3.png
+mirrored-text-image: /images/villa-3-small.png
 seo:
   title: The Bali Villa
   description: Experience Ultimate Luxury in Our Private Bali Villa. Book Now for an Unforgettable Getaway. Spacious 3-Bedroom, 3-Bathroom Villa with Complete Privacy.
@@ -22,7 +22,7 @@ seo:
 			<h2 class="editable text-center text-3xl my-8"> Welcome <br> to the epitome of luxury in Bali. </h2>
 		</div>
 
-		<div class="bg-image bg-cover bg-center shadow-2xl min-h-50" style="background-image: url('/images/villa-2.png')"></div>
+		<div class="bg-image bg-cover bg-center shadow-2xl min-h-50" style="background-image: url('/images/villa-2-small.png')"></div>
 
 		<div class="pt-15p pb-5p sm:py-15p sm:px-8">
 			
@@ -93,7 +93,7 @@ seo:
 	<div class="sm:grid sm:grid-cols-3 sm:gap-3">
 
 		<div class="hidden sm:block w-full shadow-2xl relative min-h-50">
-			<img src="/images/villa-4.png" alt="Elegant decorative plant on villa plate." class="bg-center object-top absolute object-cover w-full h-full">
+			<img src="/images/villa-4-small.png" alt="Elegant decorative plant on villa plate." class="bg-center object-top absolute object-cover w-full h-full">
 		</div>
 
 		<div class="w-full col-span-2 row-span-2 shadow-2xl relative min-h-50">
@@ -101,19 +101,19 @@ seo:
 		</div>
 
 		<div class="hidden sm:block w-full shadow-2xl relative min-h-50">
-			<img src="/images/villa-5.png" alt="Decorative artsy magazine at the Bali Villa." class="bg-center absolute object-cover  w-full h-full">
+			<img src="/images/villa-5-small.png" alt="Decorative artsy magazine at the Bali Villa." class="bg-center absolute object-cover  w-full h-full">
 		</div>
 
 		<div class="hidden sm:block w-full shadow-2xl relative min-h-50">
-			<img src="/images/villa-9.png" alt="High-quality shawls on villa shelf." class="bg-center absolute object-cover w-full h-full">
+			<img src="/images/villa-9-small.png" alt="High-quality shawls on villa shelf." class="bg-center absolute object-cover w-full h-full">
 		</div>
 
 		<div class="hidden sm:block w-full shadow-2xl relative min-h-50">
-			<img src="/images/villa-7.png" alt="Lush green plant leaves at the Bali Villa." class="bg-center absolute object-cover w-full h-full">
+			<img src="/images/villa-7-small.png" alt="Lush green plant leaves at the Bali Villa." class="bg-center absolute object-cover w-full h-full">
 		</div>
 
 		<div class="hidden sm:block w-full shadow-2xl relative min-h-50">
-			<img src="/images/villa-13.png" alt="Chair by window with ocean view." class="bg-center absolute object-cover w-full h-full">
+			<img src="/images/villa-13-small.png" alt="Chair by window with ocean view." class="bg-center absolute object-cover w-full h-full">
 		</div>
 
 	</div>
