--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default 
-title: Homepage
+title: Discover Your Bali Luxury. Unforgettable Villas, Secluded Paradise.
 background-position: bg-[position:23%_50%] sm:bg-[position:18%_50%]
 banner-image: /images/villa-1.png
 heading: The Bali Villa
@@ -11,14 +11,6 @@ seo:
   description: Experience Ultimate Luxury in Our Private Bali Villa. Book Now for an Unforgettable Getaway. Spacious 3-Bedroom, 3-Bathroom Villa with Complete Privacy.
   hide-from-google: false
 ---
-
-
-
-
-
-
-
-
 
 <!--------Text Section------------->
 
@@ -96,31 +88,31 @@ seo:
 
 <!--------Image Gallery------------->
 
-<section class="py-15p px-5p sm:p-5p">
+<section class="py-15p px-5p sm:p-5p min-h-50 min-w-[25%]">
 
 	<div class="sm:grid sm:grid-cols-3 sm:gap-3">
 
-		<div class="hidden sm:block w-full shadow-2xl relative min-h-50">
+		<div class="hidden sm:block w-full relative min-h-50">
 			<img src="/images/villa-4-small.png" alt="Elegant decorative plant on villa plate." class="bg-center object-top absolute object-cover w-full h-full">
 		</div>
 
-		<div class="w-full col-span-2 row-span-2 shadow-2xl relative min-h-50">
+		<div class="w-full col-span-2 row-span-2 relative min-h-50">
 			<img src="/images/villa-8.png" alt="Sunlit terrace with 2 chairs and table." class="bg-center absolute object-cover w-full h-full">
 		</div>
 
-		<div class="hidden sm:block w-full shadow-2xl relative min-h-50">
+		<div class="hidden sm:block w-full relative min-h-50">
 			<img src="/images/villa-5-small.png" alt="Decorative artsy magazine at the Bali Villa." class="bg-center absolute object-cover  w-full h-full">
 		</div>
 
-		<div class="hidden sm:block w-full shadow-2xl relative min-h-50">
+		<div class="hidden sm:block w-full relative min-h-50">
 			<img src="/images/villa-9-small.png" alt="High-quality shawls on villa shelf." class="bg-center absolute object-cover w-full h-full">
 		</div>
 
-		<div class="hidden sm:block w-full shadow-2xl relative min-h-50">
+		<div class="hidden sm:block w-full relative min-h-50">
 			<img src="/images/villa-7-small.png" alt="Lush green plant leaves at the Bali Villa." class="bg-center absolute object-cover w-full h-full">
 		</div>
 
-		<div class="hidden sm:block w-full shadow-2xl relative min-h-50">
+		<div class="hidden sm:block w-full relative min-h-50">
 			<img src="/images/villa-13-small.png" alt="Chair by window with ocean view." class="bg-center absolute object-cover w-full h-full">
 		</div>
 
