--- a/rooms.html
+++ b/rooms.html
@@ -28,15 +28,15 @@ seo:
 			<p class="sm:mr-8 mb-10 sm:mb-0"> From the carefully selected artwork to the soothing color palette, every element comes together to provide an exceptional experience. </p>
 		</div>
 
-		<div class="shadow-2xl mb-4 sm:mb-0 relative min-h-50">
+		<div class="mb-4 sm:mb-0 relative min-h-50">
 			<img src="/images/villa-17-small.png" alt="Cozy bed, plant, and lamp in suite." class="absolute object-cover bg-center w-full h-full">
 		</div>
 
-		<div class="shadow-2xl relative min-h-50">
+		<div class="relative min-h-50">
 			<img src="/images/villa-18-small.png" alt="Luxurious villa bathtub." class="absolute object-cover bg-center w-full h-full">
 		</div>
 
-		<div class="hidden sm:block w-full col-span-2 shadow-2xl relative min-h-50">
+		<div class="hidden sm:block w-full col-span-2 relative min-h-50">
 			<img src="/images/villa-19-small.png" alt="Plant in white pot on villa table." class="absolute object-cover bg-center w-full h-full">
 		</div>
 
@@ -54,7 +54,7 @@ seo:
 
 	<div class="sm:grid sm:grid-cols-3 gap-3">
 
-		<div class="hidden sm:block shadow-2xl relative min-h-50">
+		<div class="hidden sm:block relative min-h-50">
 			<img src="/images/new-chair-small.png" alt="" class="absolute object-cover bg-center w-full h-full">
 		</div>
 
@@ -64,11 +64,11 @@ seo:
 			<p class="mb-10 sm:mb-0">  The room features a plush king-sized bed adorned with the finest linens, ensuring a restful night's sleep in absolute opulence. </p>
 		</div>
 
-		<div class="w-full col-span-2 shadow-2xl mb-4 sm:mb-0 relative min-h-50">
+		<div class="w-full col-span-2 mb-4 sm:mb-0 relative min-h-50">
 			<img src="/images/villa-20.png" alt="Woven basket decor at villa." class="absolute object-cover bg-center w-full h-full">
 		</div>
 
-		<div class="shadow-2xl relative min-h-50">
+		<div class="relative min-h-50">
 			<img src="/images/villa-22-small.png" alt="Plant in woven basket decor." class="absolute object-cover bg-center w-full h-full">
 		</div>
 
@@ -92,15 +92,15 @@ seo:
 			<p class="sm:mr-8 mb-10 sm:mb-0"> A private sitting area provides a cozy retreat, where you can unwind with a good book or simply revel in the tranquility of your surroundings. </p>
 		</div>
 
-		<div class="shadow-2xl mb-4 sm:mb-0 relative min-h-50">
+		<div class="mb-4 sm:mb-0 relative min-h-50">
 			<img src="/images/villa-16-small.png" alt="Relaxing in a suite of the Bali Villa." class="absolute object-cover bg-center w-full h-full">
 		</div>
 
-		<div class="shadow-2xl relative min-h-50">
+		<div class="relative min-h-50">
 			<img src="/images/villa-23-small.png" alt="Bed and distant desk with plant." class="absolute object-cover bg-center w-full h-full">
 		</div>
 
-		<div class="hidden sm:block w-full col-span-2 shadow-2xl relative min-h-50">
+		<div class="hidden sm:block w-full col-span-2 relative min-h-50">
 			<img src="/images/villa-6.png" alt="White sofa, plants, photo in villa." class="absolute object-cover bg-center w-full h-full">
 		</div>
 
