--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@ seo:
 
 	<div class="sm:grid sm:grid-cols-3 gap-3">
 
-		<div class="shadow-2xl hidden sm:block relative min-h-50">
+		<div class="hidden sm:block relative min-h-50">
 			<img src="/images/villa-26-small.png" alt="Blueberry-topped porridge and plants." class="absolute object-cover object-top w-full h-full">
 		</div>
 
@@ -59,11 +59,11 @@ seo:
 
 		</div>
 
-		<div class="w-full col-span-2 shadow-2xl hidden sm:block relative min-h-50">
+		<div class="w-full col-span-2 hidden sm:block relative min-h-50">
 			<img src="/images/villa-25.png" alt="Cozy bed with wooden frame." class="absolute object-cover bg-center w-full h-full">
 		</div>
 
-		<div class="shadow-2xl relative min-h-50">
+		<div class="relative min-h-50">
 			<img src="/images/villa-27-small.png" alt="Decorative plants and object at villa." class="absolute object-cover bg-center w-full h-full">
 		</div>
 
