--- a/rooms.html
+++ b/rooms.html
@@ -9,10 +9,8 @@ text-image: /images/villa-2.png
 text-alignment: text-center sm:text-right
 mirrored-text-image: /images/villa-3.png
 seo:
-  title: 
-  description:
-  social_image:
-  keywords:
+  title: The Bali Villa
+  description: Experience Ultimate Luxury in Our Private Bali Villa. Book Now for an Unforgettable Getaway. Spacious 3-Bedroom, 3-Bathroom Villa with Complete Privacy.
   hide-from-google: false
 ---
 
