--- a/contact.html
+++ b/contact.html
@@ -8,10 +8,8 @@ pre-heading: Contact us today to make a
 text-image: /images/villa-2.png
 mirrored-text-image: /images/villa-3.png
 seo:
-  title: 
-  description:
-  social_image:
-  keywords:
+  title: The Bali Villa
+  description: Experience Ultimate Luxury in Our Private Bali Villa. Book Now for an Unforgettable Getaway. Spacious 3-Bedroom, 3-Bathroom Villa with Complete Privacy.
   hide-from-google: false
 ---
 
