--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ mirrored-text-image: /images/villa-3-small.png
 seo:
   title: The Bali Villa
   description: Experience Ultimate Luxury in Our Private Bali Villa. Book Now for an Unforgettable Getaway. Spacious 3-Bedroom, 3-Bathroom Villa with Complete Privacy.
-  hide-from-google: false
+  hide-from-google: true
 ---
 
 <!--------Text Section------------->
